[package]
name = "canstory_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
eframe = "0.21.3"
egui = "0.21.0"
tracing = "0.1.37"

# feature "persistence":
serde = { version = "1", optional = true, features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
